[IMP] partner_financial_risk: Security in field

--- a/partner_financial_risk/views/res_partner_view.xml
+++ b/partner_financial_risk/views/res_partner_view.xml
@@ -7,7 +7,7 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="priority" eval="20"/>
-        <field name="groups_id" eval="[(4, ref('base.group_sale_salesman'))]"/>
+        <field name="groups_id" eval="[(4, ref('base.group_sale_salesman')), (4, ref('account.group_account_manager'))]"/>
         <field name="arch" type="xml">
             <page name="sales_purchases" position="after">
                 <page name="financial_risk" string="Financial Risk" attrs="{'invisible': [('customer','=',False)]}">
@@ -18,29 +18,42 @@
                                     <h2>General Limits</h2>
                                     <br/>
                                 </div>
-                                <field name="risk_invoice_draft_include"/>
+                                <field name="risk_invoice_draft_include"
+                                       attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
                                 <field name="risk_invoice_draft" nolabel="1"/>
-                                <field name="risk_invoice_open_include"/>
+                                <field name="risk_invoice_open_include"
+                                       attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
                                 <field name="risk_invoice_open" nolabel="1"/>
-                                <field name="risk_invoice_unpaid_include"/>
+                                <field name="risk_invoice_unpaid_include"
+                                       attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
                                 <field name="risk_invoice_unpaid" nolabel="1"/>
-                                <field name="risk_account_amount_include"/>
+                                <field name="risk_account_amount_include"
+                                       attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
                                 <field name="risk_account_amount" nolabel="1"/>
                                 <field name="risk_total" colspan="3" class="oe_subtotal_footer_separator"/>
                                 <group col="4" colspan="3">
-                                    <field name="risk_exception" colspan="2"/>
-                                    <field name="credit_limit" colspan="2" groups="account.group_account_invoice"/>
+                                    <field name="credit_policy" colspan="2"
+                                           attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
+                                    <field name="credit_limit" colspan="2"
+                                           widget="monetary"
+                                           attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
                                 </group>
+                                <field name="risk_exception" colspan="2"/>
                             </group>
                             <group name="risk_limits"  colspan="1" class="oe_subtotal_footer">
                                 <div colspan="2">
                                     <h2>Specific Limits</h2>
                                     <br/>
                                 </div>
-                                <field name="risk_invoice_draft_limit"/>
-                                <field name="risk_invoice_open_limit"/>
-                                <field name="risk_invoice_unpaid_limit"/>
-                                <field name="risk_account_amount_limit"/>
+                                <field name="risk_invoice_draft_limit"
+                                       attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
+                                <field name="risk_invoice_open_limit"
+                                       attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
+                                <field name="risk_invoice_unpaid_limit"
+                                       attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
+                                <field name="risk_account_amount_limit"
+                                       attrs="{'readonly': [('risk_allow_edit', '=', False)]}"/>
+                                <field name="risk_allow_edit" invisible="1"/>
                             </group>
                         </group>
                     </div>
