--- a/partner_relations/views/res_partner_relation_type.xml
+++ b/partner_relations/views/res_partner_relation_type.xml
@@ -9,10 +9,11 @@
                     <field name="contact_type_left" />
                     <field name="contact_type_right" />
                     <field name="allow_self" />
-                    <field name="symmetric" />
+                    <field name="is_symmetric" />
                 </tree>
             </field>
         </record>
+
         <record id="form_res_partner_relation_type" model="ir.ui.view">
             <field name="model">res.partner.relation.type</field>
             <field type="xml" name="arch">
@@ -22,7 +23,7 @@
                             <group
                                 string="Left side of relation"
                                 name="left"
-                            >
+                                >
                                 <field name="name" />
                                 <field name="contact_type_left" />
                                 <field name="partner_category_left" />
@@ -30,8 +31,8 @@
                             <group
                                 string="Right side of relation"
                                 name="right"
-                                attrs="{'invisible': [('symmetric', '=', True)]}"
-                            >
+                                attrs="{'invisible': [('is_symmetric', '=', True)]}"
+                                >
                                 <field name="name_inverse" />
                                 <field name="contact_type_right" />
                                 <field name="partner_category_right" />
@@ -39,7 +40,8 @@
                         </group>
                         <group name="properties" string="Properties">
                             <field name="allow_self" />
-                            <field name="symmetric" />
+                            <field name="is_symmetric" />
+                            <field name="handle_invalid_onchange" />
                         </group>
                     </sheet>
                 </form>
