--- a/partner_street_number/views/res_partner.xml
+++ b/partner_street_number/views/res_partner.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-    <data>
+<odoo>
 
         <record id="view_partner_form" model="ir.ui.view">
             <field name="name">Add separate fields for street name and number</field>
@@ -65,5 +64,4 @@
             </field>
         </record>
 
-    </data>
-</openerp>
+</odoo>
