--- a/partner_street_number/views/assets.xml
+++ b/partner_street_number/views/assets.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-  <data>
+<odoo>
 
     <template id="assets_backend" name="partner_street_number backend assets" inherit_id="web.assets_backend">
-      <xpath expr="." position="inside">
-        <link rel="stylesheet" href="/partner_street_number/static/src/css/field.less"/>
-      </xpath>
+        <xpath expr="." position="inside">
+            <link rel="stylesheet" href="/partner_street_number/static/src/css/field.less"/>
+        </xpath>
     </template>
 
-  </data>
-</openerp>
+</odoo>
