--- a/partner_deduplicate_acl/wizards/partner_merge_view.xml
+++ b/partner_deduplicate_acl/wizards/partner_merge_view.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- © 2016 Antiun Ingeniería S.L. - Jairo Llopis
+<!-- © 2016 Tecnativa S.L. - Jairo Llopis
+     © 2016 Tecnativa S.L. - Vicent Cubells
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html). -->
-
-<openerp>
-    <data>
+<odoo>
 
         <record id="base_partner_merge_automatic_wizard_form" model="ir.ui.view">
             <field name="name">Restrict automatic merge access</field>
@@ -23,5 +22,4 @@
             <field name="groups_id">group_manually</field>
         </record>
 
-    </data>
-</openerp>
+</odoo>
