--- a/partner_contact_nutrition/views/res_partner_view.xml
+++ b/partner_contact_nutrition/views/res_partner_view.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="view_personal_information" model="ir.ui.view">
-        <field name="name">Partner personal info: height and weight</field>
+    <record id="view_nutrition_information" model="ir.ui.view">
+        <field name="name">Partner Contact Nutrition</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="partner_contact_personal_information_page.personal_information"/>
+        <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <data>
                 <xpath expr="//page[@name='sales_purchases']" position="before">
