--- a/partner_contact_nutrition/views/res_partner_view.xml
+++ b/partner_contact_nutrition/views/res_partner_view.xml
@@ -9,41 +9,43 @@
             <data>
                 <xpath expr="//page[@name='sales_purchases']" position="before">
                     <page name="nutrition" string="Nutrition">
-                        <group name="intake" string="Intake">
-                            <label for="caloric_intake"/>
-                            <div>
-                                <field name='caloric_intake' class="oe_inline"/>
-                                <field name='caloric_intake_uom'
-                                       class="oe_inline"
-                                       placeholder="UoM"
-                                       domain="[('category_id', '=', %(product_uom.product_category_energy)d)]"/>
-                            </div>
-                            <label for="carbohydrate_intake"/>
-                            <div>
-                                <field name='carbohydrate_intake' class="oe_inline"/>
-                                <field name='carbohydrate_intake_uom'
-                                       class="oe_inline"
-                                       placeholder="UoM"
-                                       domain="[('category_id', '=', %(product.product_uom_categ_kgm)d)]"/>
-                            </div>
-                            <label for="fat_intake"/>
-                            <div>
-                                <field name='fat_intake' class="oe_inline"/>
-                                <field name='fat_intake_uom'
-                                       class="oe_inline"
-                                       placeholder="UoM"
-                                       domain="[('category_id', '=', %(product.product_uom_categ_kgm)d)]"/>
-                            </div>
-                            <label for="protein_intake"/>
-                            <div>
-                                <field name='protein_intake' class="oe_inline"/>
-                                <field name='protein_intake_uom'
-                                       class="oe_inline"
-                                       placeholder="UoM"
-                                       domain="[('category_id', '=', %(product.product_uom_categ_kgm)d)]"/>
-                            </div>
+                        <group>
+                            <group name="intake" string="Intake">
+                                <label for="caloric_intake"/>
+                                <div>
+                                    <field name='caloric_intake' class="oe_inline"/>
+                                    <field name='caloric_intake_uom'
+                                           class="oe_inline"
+                                           placeholder="UoM"
+                                           domain="[('category_id', '=', %(product_uom.product_category_energy)d)]"/>
+                                </div>
+                                <label for="carbohydrate_intake"/>
+                                <div>
+                                    <field name='carbohydrate_intake' class="oe_inline"/>
+                                    <field name='carbohydrate_intake_uom'
+                                           class="oe_inline"
+                                           placeholder="UoM"
+                                           domain="[('category_id', '=', %(product.product_uom_categ_kgm)d)]"/>
+                                </div>
+                                <label for="fat_intake"/>
+                                <div>
+                                    <field name='fat_intake' class="oe_inline"/>
+                                    <field name='fat_intake_uom'
+                                           class="oe_inline"
+                                           placeholder="UoM"
+                                           domain="[('category_id', '=', %(product.product_uom_categ_kgm)d)]"/>
+                                </div>
+                                <label for="protein_intake"/>
+                                <div>
+                                    <field name='protein_intake' class="oe_inline"/>
+                                    <field name='protein_intake_uom'
+                                           class="oe_inline"
+                                           placeholder="UoM"
+                                           domain="[('category_id', '=', %(product.product_uom_categ_kgm)d)]"/>
+                                </div>
+                            </group>
+                            <group name="group2" string=""/>
                         </group>
-                        <group name="group2"/>
                     </page>
                 </xpath>
             </data>
