--- a/base_location_geonames_import/wizard/geonames_import_view.xml
+++ b/base_location_geonames_import/wizard/geonames_import_view.xml
@@ -34,7 +34,7 @@
 
         <menuitem id="better_zip_geonames_import_menu"
             action="better_zip_geonames_import_action"
-            parent="base.menu_localisation"
+            parent="sales_team.menu_localisation"
             sequence="50"/>
 
     </data>
