[FIX] Mismatch tag

--- a/partner_contact_nutrition_allergen/views/res_partner_view.xml
+++ b/partner_contact_nutrition_allergen/views/res_partner_view.xml
@@ -10,7 +10,7 @@
                 <group name="allergen" string="Allergens">
                     <field name="nutrition_allergen_ids" nolabel="1"/>
                 </group>
-            </data>
+            </xpath>
         </field>
     </record>
 
