[MIG] partner_contract_nutrition_activity_level: Upgrade to v10 * Rename manifest * Update openerp references to odoo * Bump versions * Update ReadMe template

--- a/partner_contact_nutrition_activity_level/views/res_partner_view.xml
+++ b/partner_contact_nutrition_activity_level/views/res_partner_view.xml
@@ -6,7 +6,7 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="partner_contact_nutrition.view_nutrition_information"/>
         <field name="arch" type="xml">
-            <xpath expr="//page[@name='nutrition']/group/group[@name='other_info']" position="inside">
+            <xpath expr="//group[@name='other_info']" position="inside">
                 <field name="activity_level"/>
             </xpath>
         </field>
