--- a/partner_contact_nutrition_allergen/views/res_partner_view.xml
+++ b/partner_contact_nutrition_allergen/views/res_partner_view.xml
@@ -6,7 +6,7 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="partner_contact_nutrition.view_nutrition_information"/>
         <field name="arch" type="xml">
-            <xpath expr="//page[@name='nutrition']/group/group[@name='other_info']" position="after">
+            <xpath expr="//group[@name='other_info']" position="after">
                 <group name="allergen" string="Allergens">
                     <field name="nutrition_allergen_ids" nolabel="1"/>
                 </group>
