Change installable to True and modify parent of Localization menu

--- a/base_location/views/better_zip_view.xml
+++ b/base_location/views/better_zip_view.xml
@@ -62,7 +62,7 @@
         <menuitem
             name="Cities/Locations Management"
             id="zip_base"
-            parent="base.menu_localisation"
+            parent="contacts.menu_contacts"
             action="action_zip_tree"
             />
 
