--- a/partner_financial_risk/views/res_partner_view.xml
+++ b/partner_financial_risk/views/res_partner_view.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- © 2016 Carlos Dauden <carlos.dauden@tecnativa.com>
-     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl-3). -->
+<!--
+     © 2016 Carlos Dauden <carlos.dauden@tecnativa.com>
+     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl-3).
+ 
+     © 2016 Salvatore Josué Trimarchi Pinto  <trimarchi@bacgroup.net>
+     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl-3).
+-->
 <odoo>
     <record id="res_partner_view_risk" model="ir.ui.view">
         <field name="name">res.partner.view.risk</field>
