--- a/partner_relations_in_tab/view/res_partner_relation_type.xml
+++ b/partner_relations_in_tab/view/res_partner_relation_type.xml
@@ -3,8 +3,10 @@
     <data>
         <record id="form_res_partner_relation_type" model="ir.ui.view">
             <field name="model">res.partner.relation.type</field>
-            <field name="type">form</field>
-            <field name="inherit_id" ref="partner_relations.form_res_partner_relation_type" />
+            <field
+                name="inherit_id"
+                ref="partner_relations.form_res_partner_relation_type"
+                />
             <field name="arch" type="xml">
                 <data>
                     <field name="partner_category_left" position="after">
