[FIX] partner_alias: Fix csv and views. * Add EOF newline to csv * Fix unnecessary formatting in res_partner_view

--- a/partner_alias/views/res_partner_view.xml
+++ b/partner_alias/views/res_partner_view.xml
@@ -13,8 +13,7 @@
                 <group string="Aliases" name="aliases">
                     <field name="alias_ids" nolabel="1">
                         <tree editable="bottom"
-                              context="{'default_partner_id': id}"
-                              >
+                              context="{'default_partner_id': id}">
                             <field name="firstname" />
                         </tree>
                     </field>
