--- a/partner_create_by_vat/views/res_partner_view.xml
+++ b/partner_create_by_vat/views/res_partner_view.xml
@@ -4,20 +4,23 @@
     <record id="view_partner_create_by_vat" model="ir.ui.view">
         <field name="name">res.partner.create.by.vat</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base_vat.view_partner_form"/>
+        <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-            <div name="vat_info" position="after">
+            <field name="vat" position="after">
                 <label for="vat_subjected"/>
                 <div name="vat_subjected_info" class="o_row">
-					<field name="vat_subjected"/>
-                   <button name="get_vies_data_from_vat"
+                    <field name="vat_subjected"
+                        attrs="{'invisible': [
+                            ('vat', '=', False),
+                            ('is_company', '=', False )]}"/>
+                    <button name="get_vies_data_from_vat"
                         attrs="{'invisible': [
                             ('vat', '=', False),
                             ('is_company', '=', False )]}"
                         colspan="2" string="Get Vies Data"
                         type="object" icon="fa-cogs"/>
                 </div>
-            </div>
+            </field>
         </field>
     </record>
 
