--- a/partner_academic_title/views/partner_academic_title_view.xml
+++ b/partner_academic_title/views/partner_academic_title_view.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<!-- Copyright 2015-2017 ACSONE SA/NV
+     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
+<odoo>
     <data>
         <record id="view_academic_title_form" model="ir.ui.view">
             <field name="name">partner.academic.title.form</field>
@@ -33,6 +35,9 @@
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
-        <menuitem id="menu_academic_title" name="Academic Titles" parent="base.menu_config_address_book" groups="base.group_system" action="open_academic_title" sequence="4"/>
+        <!-- this menu his managed in partner_contact_configuration (visible if your are in group_system)
+            group_system is activate in developper mode
+        -->
+        <menuitem id="menu_academic_title" name="Academic Titles" parent="partner_contact_configuration.menu_config_contacts" groups="base.group_no_one" action="open_academic_title" sequence="4"/>
     </data>
-</openerp>
+</odoo>
