[FIX] partner_password_reset: Fix view & README * Fix domain filter for button invisibility * Add runbot to README & Fix spelling * Align Module name in manifest

--- a/partner_password_reset/views/res_partner_view.xml
+++ b/partner_password_reset/views/res_partner_view.xml
@@ -10,7 +10,7 @@
                 <header>
                     <button name="action_reset_user_password" type="object"
                             string="Send Password Reset Email"
-                            attrs="{'invisible': [('user_ids', '=', '')]}"
+                            attrs="{'invisible': [('user_ids', '=', [])]}"
                             groups="base.group_user" />
                 </header>
             </xpath>
