--- a/partner_multi_image/views/res_partner_view.xml
+++ b/partner_multi_image/views/res_partner_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    2009 Sharoon Thomas Open Labs
-    2014 Serv. Tecnol. Avanzados Pedro M. Baeza
-    2015 Antiun Ingeniería S.L. - Jairo Llopis
-    2016 Sodexis
+    Copyright 2009 Sharoon Thomas Open Labs
+    Copyright 2014 Tecnativa - Pedro M. Baeza
+    Copyright 2015 Antiun Ingeniería S.L. - Jairo Llopis
+    Copyright 2016 Sodexis
     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
 -->
 <odoo>
