[FIX] Error displayed when create a contact in existing partner

--- a/base_location/views/partner_view.xml
+++ b/base_location/views/partner_view.xml
@@ -11,13 +11,13 @@
                     <field name="zip_id"
                         options="{'create_name_field': 'city', 'no_open': True, 'no_create': True}"
                         placeholder="City completion"
-                        class="oe_edit_only" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}" />
+                        class="oe_edit_only" />
                 </field>
                 <xpath expr="//field[@name='child_ids']/form//field[@name='city']" position="before">
                     <field name="zip_id"
                         options="{'create_name_field': 'city', 'no_open': True, 'no_create': True}"
                         placeholder="City completion"
-                        class="oe_edit_only" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}" />
+                        class="oe_edit_only" />
                 </xpath>
             </field>
         </record>
