--- a/partner_contact_in_several_companies/views/res_partner.xml
+++ b/partner_contact_in_several_companies/views/res_partner.xml
@@ -105,6 +105,8 @@
                                             <field name="country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}'/>
                                         </div>
                                     </div>
+                                    <field name="image" widget="image" options="{'preview_image': 'image_medium', 'size': [90, 90]}" modifiers="{}"/>
+                                    <field name="category_id" widget="many2many_tags" placeholder="Étiquettes..." can_create="true" can_write="true" modifiers="{}"/>
                                 </group>
                                 <group>
                                     <field name="name" string="Contact Name" attrs="{'required' : [('type', '=', 'contact')]}"/>
