--- a/partner_contact_in_several_companies/views/res_partner.xml
+++ b/partner_contact_in_several_companies/views/res_partner.xml
@@ -121,7 +121,7 @@
                                 <div>
                                     <group col="2">
                                         <field name="image" widget="image" options="{'preview_image': 'image_medium', 'size': [90, 90]}" modifiers="{}"/>
-                                        <field name="category_id" widget="many2many_tags" placeholder="Étiquettes..." can_create="true" can_write="true" modifiers="{}"/>
+                                        <field name="category_id" widget="many2many_tags" placeholder="Tags..." can_create="true" can_write="true" modifiers="{}"/>
                                     </group>
                                 </div>
                             </group>
