--- a/partner_contact_in_several_companies/views/res_partner.xml
+++ b/partner_contact_in_several_companies/views/res_partner.xml
@@ -198,5 +198,21 @@
     </field>
 </record>
 
+<record model="ir.ui.view" id="view_res_partner_contact_with_photo_form">
+    <field name="name">view.res.partner.contact.with.photo.form</field>
+    <field name="model">res.partner</field>
+    <field name="inherit_id" ref="base.view_partner_form"/>
+    <field name="arch" type="xml">
+        <xpath expr="//form//form//sheet//group" position="inside">
+            <div>
+                <group col="2">
+                    <field name="image" widget="image" options="{'preview_image': 'image_medium', 'size': [90, 90]}" modifiers="{}"/>
+                    <field name="category_id" widget="many2many_tags" placeholder="Tags..." can_create="true" can_write="true" modifiers="{}"/>
+                </group>
+            </div>
+        </xpath>
+    </field>
+</record>
+
 </data>
 </odoo>
