--- a/partner_risk_insurance/views/res_partner_view.xml
+++ b/partner_risk_insurance/views/res_partner_view.xml
@@ -1,35 +1,28 @@
-<?xml version="1.0"?>
-<openerp>
-<data>
-    <!--Add risk insurance tab in partner form. -->
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
+
     <record model="ir.ui.view" id="view_partner_form">
         <field name="name">res.partner.form.risk_insurance</field>
         <field name="model">res.partner</field>
         <field name="type">form</field>
-        <field name="inherit_id" ref="base.view_partner_form" />
+        <field name="inherit_id" ref="partner_financial_risk.res_partner_view_risk" />
         <field name="arch" type="xml">
-            <notebook position="inside">
-                <page string="Credit Insurance">
+            <page name="financial_risk" position="inside">
+                <group name="credit_insurance" string="Credit Insurance">
                     <group>
-                        <group>
                             <field name="company_credit_limit" />
                             <field name="insurance_credit_limit" />
-                        </group>
-                        <group>
                             <field name="risk_insurance_requested" />
                             <field name="risk_insurance_grant_date" />
-                        </group>
-                        <group>
+                    </group>
+                    <group>
                             <field name="risk_insurance_coverage_percent" />
-                        </group>
-                        <group>
                             <field name="risk_insurance_code" />
                             <field name="risk_insurance_code_2" />
-                        </group>
                     </group>
-                </page>
-            </notebook>
+                </group>
+            </page>
         </field>
     </record>
-</data>
-</openerp>
+
+</odoo>
